--- a/Natours Project/sass/main.scss
+++ b/Natours Project/sass/main.scss
@@ -17,6 +17,8 @@ Dark green: #28b485
 @import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/header";
 @import "layout/grid";
